2008-12-12  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.XmlEditor.mdp:
	* Tests/MonoDevelop.XmlEditor.Tests.mdp: All projects now require fx
	3.5.

2008-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.XmlEditor.mdp: Don't require a specific version of
	Mono.Addins.

2008-12-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs:
	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Track api
	changes.

2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* AssemblyInfo.cs: Add AssemblyInfo.cs files that are autogenerated from
	the addin manifests.

2008-11-25  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XmlFreeState.cs: Improve error reporting.

2008-11-25  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XmlTagState.cs: Remove multiple root
	element validation from here because it's not easy to override.

2008-11-25  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.XmlEditor.mdp: Add reference required for building.

2008-11-25  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.XmlEditor.mdp: Add glib dep.

2008-11-18  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Add
	AddMiscBeginTags member that adds begin tags for comments and CData.

2008-11-17  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/Parser.cs: Log an error region instead of
	a line/col location when possible.

2008-11-14  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/Parser.cs: Add overloads for logging with
	more accurate locations.

	* MonoDevelop.Xml.StateEngine/XmlTagState.cs: Remove unused code.

2008-11-14  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XDom.cs: Add a Value property to XDocType.

	* MonoDevelop.Xml.StateEngine/XmlDocTypeState.cs: Copture the doctype