@@ -1,3 +1,12 @@
+2008-12-29  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Moved
+	outline-building code from MoonlightEditorExtension to be the default
+	implementation in BaseXmlEditorExtension, since it works with any
+	XmlParsedDocument.  Fix GetCompleteName so it handles prefixes, and
+	expose it as protected.  Add some simple entity completion support. 
+	Implement support for automatic closing tags via a protected flag.
+
 2008-12-12  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.XmlEditor.mdp:
